// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Text Snapshot added optional style inline prop 1`] = `
<p
  className="jsx-3515229906"
  style={
    Object {
      "lineHeight": 2,
      "marginTop": 30,
    }
  }
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot primary color of the theme 1`] = `
<p
  className="jsx-3985166232"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot secondary font-family of the theme 1`] = `
<p
  className="jsx-1415756751"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot use align prop with value right 1`] = `
<p
  className="jsx-1643598103"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot use gutterBottom prop 1`] = `
<p
  className="jsx-3515229906"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot use gutterBottom prop and secondary color 1`] = `
<p
  className="jsx-161554303"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot use gutterBottom prop and secondary font 1`] = `
<p
  className="jsx-1415756751"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot use gutterBottom prop, secondary font and align 1`] = `
<p
  className="jsx-2848760586"
  style={Object {}}
>
  This is a component Text!
</p>
`;

exports[`Component Text Snapshot without arguments, take the default values, use childreen prop 1`] = `
<p
  className="jsx-3515229906"
  style={Object {}}
>
  This is a component Text!
</p>
`;
